--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -3,3 +3,177 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
 }
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+html {
+    overflow-y: scroll;
+}
+
+a {
+    text-decoration: none;
+    color: #1ab188;
+    transition: .5s ease;
+}
+
+a:hover {
+    color: #db8a5c;
+}
+
+.form {
+    background: rgb(37, 27, 26,0.8);
+    padding: 40px;
+    max-width: 600px;
+    margin: 40px  40px 40px auto;
+    border-radius: 4px;
+}
+
+.tab-group {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 40px 0;
+}
+
+.tab-group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.tab-group li a {
+    display: block;
+    text-decoration: none;
+    padding: 15px;
+    background: rgba(160, 179, 176, 0.25);
+    color: #a0b3b0;
+    font-size: 20px;
+    float: left;
+    width: 50%;
+    text-align: center;
+    cursor: pointer;
+}
+
+.tab-group li a:hover {
+    background: #db8a5c;
+    color: #ffffff;
+}
+
+.tab-group .active a {
+    background: #a75114;
+    color: #ffffff;
+}
+
+.tab-content>div:last-child {
+    display: none;
+}
+
+h1 {
+    text-align: center;
+    color: #e9d18f;
+    font-weight: 300;
+    margin: 0 0 40px;
+}
+label{
+    position: absolute;
+    top: -22px;
+    color: #e9d18f;
+}
+
+
+label .req {
+    margin: 2px;
+    color:  #db8a5c;
+}
+
+label.active {
+    left: 2px;
+    font-size: 14px;
+}
+
+label.active .req {
+    opacity: 0;
+}
+
+label.highlight {
+    color: #ffffff;
+}
+
+input,
+textarea {
+    font-size: 22px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 5px 10px;
+    background: none;
+    background-image: none;
+    border: 1px solid  #db8a5c;
+    color: #ffffff;
+    border-radius: 0;
+}
+
+input:focus,
+textarea:focus {
+    outline: 0;
+    border-color: #b7a170;
+}
+
+textarea {
+    border: 2px solid #a0b3b0;
+    resize: vertical;
+}
+
+.field-wrap {
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.top-row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.top-row>div {
+    float: left;
+    width: 48%;
+    margin-right: 4%;
+}
+
+.top-row>div:last-child {
+    margin: 0;
+}
+
+.button {
+    border: 0;
+    outline: none;
+    border-radius: 0;
+    padding: 15px 0;
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    background:  #a75114;
+    color: #ffffff;
+    transition: all 0.5s ease;
+    -webkit-appearance: none;
+}
+
+.button:hover,
+.button:focus {
+    background: #db8a5c;
+}
+
+.button-block {
+    display: block;
+    width: 100%;
+}
+
+.forgot {
+    margin-top: -20px;
+    text-align: right;
+}
