--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -1,9 +1,71 @@
 body{
+    padding: 0px;
+    margin: 0px;
+    background-color: #562f19;
+}
+.pg-content{
+   margin-top: -20px;
+}
+
+/* Navigation bar styles */
+
+nav {
+    width: 100%;
+    height: 60px;
+    color: #fff;
+    background-color: #113046;
+}
+
+nav p a{
+    font-family: Arial;
+    color:#fff;
+    font-size: 24px;
+    line-height: 55px;
+    float:left;
+    padding: 0 21px;
+   
+}
+
+nav ul{
+    float: right;
+}
+nav ul li{
+    float: left;
+    list-style: none;
+    position: relative;
+}
+nav ul li a{
+    display: block;
+    font-family: Arial;
+    color:#fbfbfb;
+    font-size: 20px;
+    padding-left: 10px;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+
+
+/* End of navigation styles */
+
+
+
+.top-raw div{
+    float: left;
+    margin-right:4%;
+    width: 46%
+}
+#home{
     background-image: url("../img/homepagebg.jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
 
+#welcome{
+    background-image: url("../img/welcome.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+}
 *,
 *:before,
 *:after {
@@ -32,6 +94,11 @@ a:hover {
     border-radius: 4px;
 }
 
+.dEntry{
+    max-width: 80%;
+    margin: auto;
+}
+
 .tab-group {
     list-style: none;
     padding: 0;
@@ -43,8 +110,10 @@ a:hover {
     display: table;
     clear: both;
 }
-
-.tab-group li a {
+.tab-group div{
+    display: inline;
+}
+.tab-group div a {
     display: block;
     text-decoration: none;
     padding: 15px;
@@ -57,7 +126,7 @@ a:hover {
     cursor: pointer;
 }
 
-.tab-group li a:hover {
+.tab-group div a:hover {
     background: #db8a5c;
     color: #ffffff;
 }
@@ -71,7 +140,7 @@ a:hover {
     display: none;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     color: #e9d18f;
     font-weight: 300;
@@ -148,6 +217,12 @@ textarea {
     margin: 0;
 }
 
+.Entrymessage div{
+    float: left;
+    margin-right: 4%;
+    width: 46%;
+}
+
 .button {
     border: 0;
     outline: none;
@@ -177,3 +252,125 @@ textarea {
     margin-top: -20px;
     text-align: right;
 }
+.diaryEntry{
+    width: 700px;
+    margin: auto;
+    background-color: rgb(20,20,30,0.9);
+    padding: 40px;
+    color: gray;
+}
+.dHeader{
+    background-color: rgb(50,50,50,0.9);
+    padding: 20px;
+}
+.dHeader h1,h2{
+    margin: 0px;
+    padding: 5px 0px
+}
+.diaryEntry a{
+    padding: 10px;
+    color:#e9d18f;
+    border: 2px solid;
+    border-radius: 5px;
+}
+
+/*diary entries page*/
+.d-table{
+    padding: 20px;
+    background-image: url("../img/dEntryBg.jpg");
+    background-repeat: no-repeat;
+    
+}
+.d-table table{
+    padding: 2%;
+    background-color: rgb(50,50,50,0.9);
+    color:white;
+}
+table{
+    border-collapse: collapse;
+}
+
+td, th{
+    border: 1px solid #fff;
+    padding: 15px 20px;
+}
+
+.action a{
+    padding:5px 10px;
+    border: 2px solid;
+    margin-right: 3px;
+}
+
+.profile{
+    background-color: #9f5218;
+    width: 50%;
+    margin: auto;
+}
+#profile-bg{
+    background-image: url('../img/dheader.jpg');
+    background-repeat: no-repeat;
+    min-height: 200px;
+
+    background-position-y: -150px;
+}
+.profile-pic{
+    margin: 0 auto;
+    width: 40%;
+    margin-top: -130px;
+}
+.profile-pic img{
+    border-radius: 50%;
+    padding: 5px;
+    max-width: 100%;
+    max-height: 100%;
+    
+}
+.profile-body{
+    width: 50%;
+    padding: 5px 10px 50px 10px;
+    margin: auto;
+    /*! margin-bottom: 10px; */
+}
+
+
+
+ /* Style the tab */
+
+ .tab {
+     overflow: hidden;
+     /*! border: 1px solid #ccc; */
+     background-color: #f1f1f1;
+ }
+
+ /* Style the buttons that are used to open the tab content */
+
+ .tab button {
+     background-color: inherit;
+     float: left;
+     border: none;
+     outline: none;
+     cursor: pointer;
+     padding: 14px 16px;
+     transition: 0.3s;
+ }
+
+ /* Change background color of buttons on hover */
+
+ .tab button:hover {
+     background-color: #ddd;
+ }
+
+ /* Create an active/current tablink class */
+
+ .tab button.active {
+     background-color: #ccc;
+ }
+
+ /* Style the tab content */
+
+ .tabcontent {
+     display: none;
+     padding: 6px 12px;
+     border: 1px solid #ccc;
+     border-top: none;
+ }
