--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -13,17 +13,16 @@ nav {
     width: 100%;
     height: 60px;
     color: #fff;
-    background-color: #113046;
+    background-color:rgb(49, 31, 24,0.8);
 }
 
 nav p a{
     font-family: Arial;
     color:#fff;
-    font-size: 24px;
+    font-size: 40px;
     line-height: 55px;
     float:left;
-    padding: 0 21px;
-   
+    padding: 0 70px;
 }
 
 nav ul{
@@ -49,48 +48,87 @@ nav ul li a{
 /* End of navigation styles */
 
 
+/*Home page*/
+#home {
+    background-image: url("../img/homepagebg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.home-col{
+    width: 50% ;
+    float: left;
+    padding: 40px 20px;
+}
+
+#home-msg {
+    color: rgb(233, 209, 132);
+    padding: 30% 0% 0% 30%;
+}
+
+#home-msg li {
+    padding: 5%;
+    list-style: none;
+    margin: 3% 0%;
+    width: 70%
+}
+
+.color1 {
+    background: #2d7da4;
+}
+
+.color2 {
+    background: #6aa42f;
+}
+
+.color3  {
+    background: #ffcc33;
+}
+
+.color4 {
+    background: #db3615;
+}
+/*End of home page style*/
+
+
 
 .top-raw div{
     float: left;
     margin-right:4%;
     width: 46%
 }
-#home{
-    background-image: url("../img/homepagebg.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-}
+
 
 #welcome{
     background-image: url("../img/welcome.jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
+
+
+
+
 *,
 *:before,
 *:after {
     box-sizing: border-box;
 }
 
-html {
-    overflow-y: scroll;
-}
 
 a {
     text-decoration: none;
-    color: #1ab188;
-    transition: .5s ease;
+    color: #c46731;
 }
 
 a:hover {
     color: #db8a5c;
 }
 
+/*Form styling*/
 .form {
     background: rgb(37, 27, 26,0.8);
     padding: 40px;
     max-width: 600px;
-    margin: 40px  40px 40px auto;
     border-radius: 4px;
 }
 
@@ -98,6 +136,7 @@ a:hover {
     max-width: 80%;
     margin: auto;
 }
+
 
 .tab-group {
     list-style: none;
@@ -201,6 +240,9 @@ textarea {
     margin-bottom: 40px;
 }
 
+
+/*End of form styling*/
+
 .top-row:after {
     content: "";
     display: table;
@@ -301,6 +343,8 @@ td, th{
     margin-right: 3px;
 }
 
+
+/*Styling the profile page*/
 .profile{
     background-color: #9f5218;
     width: 50%;
@@ -329,20 +373,19 @@ td, th{
     width: 50%;
     padding: 5px 10px 50px 10px;
     margin: auto;
-    /*! margin-bottom: 10px; */
 }
 
+/*End of profile style*/
 
 
- /* Style the tab */
+
+ /* Style entries page */
 
  .tab {
      overflow: hidden;
      /*! border: 1px solid #ccc; */
      background-color: #f1f1f1;
  }
-
- /* Style the buttons that are used to open the tab content */
 
  .tab button {
      background-color: inherit;
@@ -354,13 +397,9 @@ td, th{
      transition: 0.3s;
  }
 
- /* Change background color of buttons on hover */
-
  .tab button:hover {
      background-color: #ddd;
  }
-
- /* Create an active/current tablink class */
 
  .tab button.active {
      background-color: #ccc;
